--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,17 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
 loader_version=0.16.13
 
 # Mod Properties
-mod_version=1.2-1.21.1-fabric
+mod_version=1.2-1.20.1-fabric
 maven_group=com.nitron.nickname
 archives_base_name=nickname
 
 # Dependencies
-fabric_version=0.115.4+1.21.1
-cca_version=6.1.2
-midnightlib_version = 1.6.9+1.21-fabric
-modmenu_version=11.0.3
+fabric_version=0.92.5+1.20.1
+cca_version=5.2.2
+midnightlib_version = 1.4.1-fabric
+modmenu_version=7.2.2
